--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Curso da Alura</title>
@@ -9,7 +9,7 @@
 		<li>Vagrant</li>
 		<li>Docker</li>
 		<li>Ansible</li>
-		<li>Integração Contínua</li>
+		<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 	</ul>
 </body>
 </html>
