--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li>Docker: Criando containers sem dor de cabeça</li>
 		<li>Ansible</li>
 		<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-		<li>Kubernertes!</li>
+		<li>Kubernertes: introdução a orquestração de conceitos</li>
 	</ul>
 </body>
 </html>
